# name: test_get[False-False]
  <class 'dict'> {
    'dev': False,
    'endpoints': <class 'dict'> {
      'account': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/account',
        'url': '/account',
      },
      'admin': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/admin',
        'url': '/admin',
      },
      'analyses': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/analyses',
        'url': '/analyses',
      },
      'authentication': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/overview/authentication',
        'url': '/overview/authentication',
      },
      'errors': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/overview/errors',
        'url': '/overview/errors',
      },
      'groups': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/groups',
        'url': '/groups',
      },
      'history': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/history',
        'url': '/history',
      },
      'hmms': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/hmms',
        'url': '/hmms',
      },
      'indexes': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/indexes',
        'url': '/indexes',
      },
      'instance_message': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/instance_message',
        'url': '/instance_message',
      },
      'jobs': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/jobs',
        'url': '/jobs',
      },
      'labels': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/labels',
        'url': '/labels',
      },
      'ml': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/ml',
        'url': '/ml',
      },
      'otus': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/otus',
        'url': '/otus',
      },
      'references': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/refs',
        'url': '/references',
      },
      'samples': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/samples',
        'url': '/samples',
      },
      'settings': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/settings',
        'url': '/settings',
      },
      'spaces': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/spaces',
        'url': '/spaces',
      },
      'subtraction': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/subtraction',
        'url': '/subtraction',
      },
      'tasks': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/tasks',
        'url': '/tasks',
      },
      'uploads': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/uploads',
        'url': '/uploads',
      },
      'users': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/users',
        'url': '/users',
      },
    },
    'first_user': False,
    'version': <class 'str'>,
  }
---
# name: test_get[False-True]
  <class 'dict'> {
    'dev': True,
    'endpoints': <class 'dict'> {
      'account': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/account',
        'url': '/account',
      },
      'admin': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/admin',
        'url': '/admin',
      },
      'analyses': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/analyses',
        'url': '/analyses',
      },
      'authentication': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/overview/authentication',
        'url': '/overview/authentication',
      },
      'errors': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/overview/errors',
        'url': '/overview/errors',
      },
      'groups': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/groups',
        'url': '/groups',
      },
      'history': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/history',
        'url': '/history',
      },
      'hmms': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/hmms',
        'url': '/hmms',
      },
      'indexes': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/indexes',
        'url': '/indexes',
      },
      'instance_message': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/instance_message',
        'url': '/instance_message',
      },
      'jobs': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/jobs',
        'url': '/jobs',
      },
      'labels': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/labels',
        'url': '/labels',
      },
      'ml': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/ml',
        'url': '/ml',
      },
      'otus': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/otus',
        'url': '/otus',
      },
      'references': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/refs',
        'url': '/references',
      },
      'samples': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/samples',
        'url': '/samples',
      },
      'settings': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/settings',
        'url': '/settings',
      },
      'spaces': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/spaces',
        'url': '/spaces',
      },
      'subtraction': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/subtraction',
        'url': '/subtraction',
      },
      'tasks': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/tasks',
        'url': '/tasks',
      },
      'uploads': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/uploads',
        'url': '/uploads',
      },
      'users': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/users',
        'url': '/users',
      },
    },
    'first_user': False,
    'version': <class 'str'>,
  }
---
# name: test_get[True-False]
  <class 'dict'> {
    'dev': False,
    'endpoints': <class 'dict'> {
      'account': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/account',
        'url': '/account',
      },
      'admin': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/admin',
        'url': '/admin',
      },
      'analyses': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/analyses',
        'url': '/analyses',
      },
      'authentication': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/overview/authentication',
        'url': '/overview/authentication',
      },
      'errors': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/overview/errors',
        'url': '/overview/errors',
      },
      'groups': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/groups',
        'url': '/groups',
      },
      'history': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/history',
        'url': '/history',
      },
      'hmms': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/hmms',
        'url': '/hmms',
      },
      'indexes': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/indexes',
        'url': '/indexes',
      },
      'instance_message': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/instance_message',
        'url': '/instance_message',
      },
      'jobs': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/jobs',
        'url': '/jobs',
      },
      'labels': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/labels',
        'url': '/labels',
      },
      'ml': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/ml',
        'url': '/ml',
      },
      'otus': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/otus',
        'url': '/otus',
      },
      'references': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/refs',
        'url': '/references',
      },
      'samples': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/samples',
        'url': '/samples',
      },
      'settings': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/settings',
        'url': '/settings',
      },
      'spaces': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/spaces',
        'url': '/spaces',
      },
      'subtraction': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/subtraction',
        'url': '/subtraction',
      },
      'tasks': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/tasks',
        'url': '/tasks',
      },
      'uploads': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/uploads',
        'url': '/uploads',
      },
      'users': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/users',
        'url': '/users',
      },
    },
    'first_user': True,
    'version': <class 'str'>,
  }
---
# name: test_get[True-True]
  <class 'dict'> {
    'dev': True,
    'endpoints': <class 'dict'> {
      'account': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/account',
        'url': '/account',
      },
      'admin': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/admin',
        'url': '/admin',
      },
      'analyses': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/analyses',
        'url': '/analyses',
      },
      'authentication': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/overview/authentication',
        'url': '/overview/authentication',
      },
      'errors': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/overview/errors',
        'url': '/overview/errors',
      },
      'groups': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/groups',
        'url': '/groups',
      },
      'history': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/history',
        'url': '/history',
      },
      'hmms': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/hmms',
        'url': '/hmms',
      },
      'indexes': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/indexes',
        'url': '/indexes',
      },
      'instance_message': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/instance_message',
        'url': '/instance_message',
      },
      'jobs': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/jobs',
        'url': '/jobs',
      },
      'labels': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/labels',
        'url': '/labels',
      },
      'ml': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/ml',
        'url': '/ml',
      },
      'otus': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/otus',
        'url': '/otus',
      },
      'references': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/refs',
        'url': '/references',
      },
      'samples': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/samples',
        'url': '/samples',
      },
      'settings': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/settings',
        'url': '/settings',
      },
      'spaces': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/spaces',
        'url': '/spaces',
      },
      'subtraction': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/subtraction',
        'url': '/subtraction',
      },
      'tasks': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/tasks',
        'url': '/tasks',
      },
      'uploads': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/uploads',
        'url': '/uploads',
      },
      'users': <class 'dict'> {
        'doc': 'https://www.virtool.ca/docs/api/users',
        'url': '/users',
      },
    },
    'first_user': True,
    'version': <class 'str'>,
  }
---
